# GuteMusik

./: App.tsx  LICENSE  README.md  RELEASE_DECISIONS.md  constants.tsx  document.md  flake.nix  index.html  index.tsx  metadata.json  mini-player.html  mini-player.tsx  package-lock.json  package.json  types.ts  vite.config.ts
components/: AlbumArt.tsx  ArtistImage.tsx  ArtistLink.tsx  ChromeIcon.tsx  FullScreenPlayer.tsx  MiniPlayer.tsx  PlayerCapsule.tsx  Sidebar.tsx  SourceBadge.tsx
context/: AudioContext.tsx  PluginContext.tsx  ServerContext.tsx
hooks/: useAlbumCover.ts  useAlbumInfo.ts  useAlbumYears.ts  useArtistBackground.ts  useArtistImage.ts  useArtistInfo.ts  usePlatform.ts
mcp/: index.js  package-lock.json  package.json
plugin-template/: README.md  build.sh  index.tsx  manifest.json
plugins/: index.ts
services/: aggregator.ts  lyrics.ts  pluginLoader.ts  rateLimit.ts  subsonic.ts
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/audio/: commands.rs  engine.rs  events.rs  mod.rs  source.rs  state.rs
src-tauri/src/plugins/: downloader.rs  mod.rs  terminal.rs
src-tauri/src/plugins/downloader/: config.rs  mod.rs  musicbrainz.rs  types.rs  youtube.rs
tasks/: todo.md
test-plugin/: index.js  manifest.json
utils/: albumCover.ts  albumYear.ts  artistImage.ts  artistParser.ts  formatTime.ts  placeholders.ts
views/: AddMusicWizard.tsx  AlbumView.tsx  ArtistView.tsx  LibraryView.tsx  PlaylistView.tsx  QueueView.tsx  SearchView.tsx  (+1 more)
(+28 files in other folders)
