[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
plugins = ["dep:id3", "dep:urlencoding", "dep:portable-pty"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

# Audio engine
rodio = { version = "0.19", default-features = false, features = ["symphonia-all"] }
symphonia = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
bytes = "1.5"
thiserror = "1.0"

# Downloader plugin (optional)
id3 = { version = "1.14", optional = true }
urlencoding = { version = "2.1", optional = true }

# Terminal plugin (optional)
portable-pty = { version = "0.8", optional = true }
